@@ -26,6 +26,7 @@ Bugs fixed:
 - 2844812 CMPIConnect2 doesn't init CMPIStatus completely
 - 2847757 local cim client execQuery leak
 - 2791613 interop provider gives invalid error while creating instance
+- 1897383 isa() in interopProvider.c doesn't find all children
 
 Changes in 1.3.4
 ================
